Added a public property for IncrementAmount with a [Parameter] attribute. Changed the IncrementCount method to use the IncrementAmount when incrementing the value of currentCount.

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,6 +1,9 @@
-﻿@page "/"
+@page "/"
+@using hallo_werld
 
 <PageTitle>Home</PageTitle>
+
+<Counter IncrementAmount="10"/>
 
 <h1>Hello, world!</h1>
 
