--- a/Components/Pages/Counter.razor
+++ b/Components/Pages/Counter.razor
@@ -1,4 +1,4 @@
-﻿@page "/counter"
+@page "/counter"
 @rendermode InteractiveServer
 
 <PageTitle>Counter</PageTitle>
@@ -10,10 +10,14 @@
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
+    private  int currentCount = 0;
+
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
 
     private void IncrementCount()
     {
-        currentCount++;
+        currentCount += IncrementAmount;
+
     }
 }
